<resources>
    <string name="bts_bottom_apply_default">立即注册车主</string>
    <string name="bts_bottom_inviation_default">我要推荐车主</string>
    <string name="bts_bottom_update_app">立即升级客户端</string>
    <string name="bts_channel_name">顺风车</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="share">分享</string>
    <string name="already_payed">您的订单已完成，无需支付。</string>
    <string name="black_list_user">您的账号被限制，无法呼叫代驾</string>
    <string name="bluetooth">蓝牙</string>
    <string name="bts_check_pay_failure">支付验证失败</string>
    <string name="bts_check_pay_success">支付验证成功</string>
    <string name="bts_checking_pay_status">正在确认支付状态...</string>
    <string name="bts_comment_detail_title">描述我对ta的印象</string>
    <string name="bts_comment_not_empty">请填写评论信息！</string>
    <string name="bts_common_0">0</string>
    <string name="bts_common_add_tag">添加印象</string>
    <string name="bts_common_cancel">取消</string>
    <string name="bts_common_checking_weixin">正在检测微信支付是否可用...</string>
    <string name="bts_common_comment_success">添加成功！</string>
    <string name="bts_common_complain">投诉</string>
    <string name="bts_common_empty">  </string>
    <string name="bts_common_err_order_not_null">传入的订单信息不能为空</string>
    <string name="bts_common_from">从</string>
    <string name="bts_common_hour">17:00</string>
    <string name="bts_common_left_tags">还可以添加%1$s个标签</string>
    <string name="bts_common_left_text">还可以输入%1$s个字</string>
    <string name="bts_common_left_text_chaoguo">标签最多支持%1$s个字,已超过%2$s个字</string>
    <string name="bts_common_loading_data">正在请求数据...</string>
    <string name="bts_common_loading_msg">加载中...</string>
    <string name="bts_common_max_tags">最多支持%1$s个标签</string>
    <string name="bts_common_no_net_error_tips1">点击屏幕，重新加载</string>
    <string name="bts_common_no_net_error_tips2">网络状况不佳，请查看网络设置</string>
    <string name="bts_common_ok">确定</string>
    <string name="bts_common_pay_cancel">取消支付</string>
    <string name="bts_common_pay_failure">支付失败</string>
    <string name="bts_common_pay_success">支付成功</string>
    <string name="bts_common_price_detail_title">计费详情</string>
    <string name="bts_common_retry">重试</string>
    <string name="bts_common_see_detail">查看明细</string>
    <string name="bts_common_share">分享</string>
    <string name="bts_common_submit_comment_err">提交评论失败,请重试</string>
    <string name="bts_common_submitting_comment">正在提交评论...</string>
    <string name="bts_common_tag_me_to_other">我对ta的印象</string>
    <string name="bts_common_tag_other_to_me">ta对我的印象</string>
    <string name="bts_common_take_order_now">立即抢单</string>
    <string name="bts_common_text_submit">提交</string>
    <string name="bts_common_to">到</string>
    <string name="bts_common_today">"今天
17:00"</string>
    <string name="bts_common_yuan">元</string>
    <string name="bts_conpon_select_error">券选择错误</string>
    <string name="bts_conpon_select_error_select_url_empty">券地址为空</string>
    <string name="bts_conpon_select_title">选择优惠券</string>
    <string name="bts_driver_arrive_psnger_loading">送达乘客...</string>
    <string name="bts_driver_cancel_order">车主取消</string>
    <string name="bts_driver_cancel_order_no">不取消了</string>
    <string name="bts_driver_cancel_order_notice">接单后车主不能取消，请您联系乘客~</string>
    <string name="bts_driver_cancel_order_right_btn_txt">取消订单</string>
    <string name="bts_driver_cancel_order_yes">联系乘客</string>
    <string name="bts_driver_car_info">%1$s%2$s %3$s %4$s</string>
    <string name="bts_driver_car_info2">收到了%s个印象</string>
    <string name="bts_driver_complain">司机投诉</string>
    <string name="bts_driver_get_order_failure">获取订单信息失败！</string>
    <string name="bts_driver_get_order_info_fail_title">获取失败</string>
    <string name="bts_driver_hold_order_state_btn_order_cancel">乘客已取消，去看看其他订单吧~</string>
    <string name="bts_driver_hold_order_state_btn_order_timeout">订单已超时取消，下次快点哦~</string>
    <string name="bts_driver_hour_minutes_to_go">距离出发时间还有%1$s小时%2$s分钟</string>
    <string name="bts_driver_jiecheng_num">顺风车出行%1$s次</string>
    <string name="bts_driver_minutes_to_go">距离出发时间还有%1$s分钟</string>
    <string name="bts_driver_msg_order_cancel">车主已取消</string>
    <string name="bts_driver_order_robbed_other">订单已被抢，下次快点哦~</string>
    <string name="bts_driver_order_task_load">正在刷新，请耐心等待...</string>
    <string name="bts_driver_order_time_out">订单已失效</string>
    <string name="bts_driver_send_confirm_dialog_cancel">返回</string>
    <string name="bts_driver_send_confirm_dialog_ok">确认送达</string>
    <string name="bts_driver_send_confirm_dialog_title">确认把乘客送到目的地了吗？</string>
    <string name="bts_driver_send_passenger_success">送达乘客</string>
    <string name="bts_driver_send_passenger_with_free_pay">为乘客免单</string>
    <string name="bts_driver_send_passenger_with_free_pay_minute">乘客只需支付0.01元</string>
    <string name="bts_driver_strive_err_order">所抢订单与现有订单错误,请联系客服！</string>
    <string name="bts_driver_strive_loading_txt">正在抢单...</string>
    <string name="bts_driver_strive_success">抢单成功</string>
    <string name="bts_driver_title_">等待出发</string>
    <string name="bts_driver_title_order_cancle">订单已取消</string>
    <string name="bts_driver_title_order_cancle_by_kefu">客服关闭</string>
    <string name="bts_driver_title_order_over">完成</string>
    <string name="bts_driver_title_order_timeout">订单已失效</string>
    <string name="bts_driver_title_order_wait_rob">待抢单</string>
    <string name="bts_driver_title_robbed_other">订单已被抢</string>
    <string name="bts_driver_title_robbed_self_wait_go">进行中</string>
    <string name="bts_driver_title_robbed_self_wait_pay">等待支付</string>
    <string name="bts_driver_title_wait_comment">添加印象</string>
    <string name="bts_driver_wait_passenger_pay">等待乘客支付</string>
    <string name="bts_err_lat_or_lng_wrong">获取地理位置失败！</string>
    <string name="bts_errmsg_need_orderid">订单ID不能为空</string>
    <string name="bts_errmsg_need_routeid">路线ID不能为空</string>
    <string name="bts_error_pay_info">价格信息错误</string>
    <string name="bts_fee_detail_car_fee">车费</string>
    <string name="bts_fee_detail_other_fee">其它费用</string>
    <string name="bts_fee_detail_pin_quan1">拼车券抵扣</string>
    <string name="bts_fee_detail_platform_add_fee">平台加价</string>
    <string name="bts_fee_detail_total_fee">车费合计</string>
    <string name="bts_h5_host">com.didi.passengerapp</string>
    <string name="bts_h5_scheme">diditravel</string>
    <string name="bts_i_got_it">我知道了</string>
    <string name="bts_im_common_msg1">您好，请稍等马上到。</string>
    <string name="bts_im_common_msg2">您好，还有多久到?</string>
    <string name="bts_im_common_msg3">您好，我已经到了，你在哪?</string>
    <string name="bts_im_out_date">行程结束很久啦，不能联系了哦~</string>
    <string name="bts_im_passenger_wait_driver">抢单后才可以与乘客联系哦~</string>
    <string name="bts_js_upload_loading_resize">正在存储中…</string>
    <string name="bts_js_upload_loading_upload">正在上传中…</string>
    <string name="bts_js_upload_toast_error_param">参数错误</string>
    <string name="bts_js_upload_toast_error_photo">获取照片失败</string>
    <string name="bts_js_upload_toast_error_type">该类型不存在</string>
    <string name="bts_js_upload_toast_upload_fail">上传失败</string>
    <string name="bts_main_bottom_book_txt">查看订单</string>
    <string name="bts_main_bottom_get_pasnger_txt">预约顺风车</string>
    <string name="bts_main_user_none">您还没有登录哦~</string>
    <string name="bts_main_user_order_none">查看待处理订单(0个)</string>
    <string name="bts_map_psnger_him_tip">他要去 </string>
    <string name="bts_map_psnger_him_tip2">她要去 </string>
    <string name="bts_map_psnger_him_tip3">Ta要去 </string>
    <string name="bts_map_psnger_tip">乘客在 </string>
    <string name="bts_open_location_alert_create">您需要打开定位权限，才可以发单哦~</string>
    <string name="bts_open_location_alert_strive">您需要打开定位权限，才可以抢单哦~</string>
    <string name="bts_order_add_cancel">算了吧</string>
    <string name="bts_order_add_ok">去填写</string>
    <string name="bts_order_add_toast">你还没有添加路线，添加后您将收到高额补贴的顺路订单推送哦~</string>
    <string name="bts_order_auth_cancel">取消</string>
    <string name="bts_order_auth_ok">去完善</string>
    <string name="bts_order_auth_tips">您的车主信息尚未完善，暂时还不能接单哦，赶快补充完善吧~</string>
    <string name="bts_order_cancel">取消订单</string>
    <string name="bts_order_cancel_button">取消</string>
    <string name="bts_order_cancel_button_title_1">再等等吧</string>
    <string name="bts_order_cancel_desc">确定要取消订单</string>
    <string name="bts_order_cancel_desc_2">车主平均接单时间为20分钟，再等一会儿就有车主接单哦</string>
    <string name="bts_order_cancel_failed">取消失败，请重试</string>
    <string name="bts_order_cancel_success">取消成功</string>
    <string name="bts_order_check_content_msg">您有未完成订单，请处理后再试</string>
    <string name="bts_order_check_match_order">您可以去看看顺路订单</string>
    <string name="bts_order_desc_format">顺风车出行%s次</string>
    <string name="bts_order_dialog_title">立刻抢单</string>
    <string name="bts_order_listview_foot_text_is_loading">正在加载…</string>
    <string name="bts_order_listview_foot_text_no_more">没有更多了</string>
    <string name="bts_order_listview_foot_text_pull_up">正在加载…</string>
    <string name="bts_order_listview_no_network">网络未连接</string>
    <string name="bts_order_load_failed">加载失败，请重试</string>
    <string name="bts_order_manager_right_title">路线设置</string>
    <string name="bts_order_manager_title">订单中心</string>
    <string name="bts_order_non_match_order">暂无顺路订单</string>
    <string name="bts_order_non_match_order_2">您可以去看看附近订单</string>
    <string name="bts_order_non_match_order_3">来晚了，订单被人抢光了</string>
    <string name="bts_order_non_nearby_order">暂无附近订单</string>
    <string name="bts_order_non_nearby_order_2">您可以去看看顺路订单</string>
    <string name="bts_order_non_nearby_order_3">来晚了，订单被人抢光了</string>
    <string name="bts_order_non_pending_order">暂无待处理订单</string>
    <string name="bts_order_ok">确定</string>
    <string name="bts_order_ok_button_title_1">确认取消</string>
    <string name="bts_order_passenger_title">待处理订单</string>
    <string name="bts_order_process">处理中...</string>
    <string name="bts_order_reach_success">送达成功</string>
    <string name="bts_order_save_config_failed_tips">当前无网络连接，请稍后重试</string>
    <string name="bts_order_state_cancel">已取消</string>
    <string name="bts_order_state_checkorder_driver">查看详情</string>
    <string name="bts_order_state_comment">添加印象</string>
    <string name="bts_order_state_comment_1">等待支付</string>
    <string name="bts_order_state_comment_driver">添加印象</string>
    <string name="bts_order_state_finish">已完成</string>
    <string name="bts_order_state_invalid">订单失效</string>
    <string name="bts_order_state_reach_destination">送达乘客</string>
    <string name="bts_order_state_reach_destination_1">等待出发</string>
    <string name="bts_order_state_waiting_for_comment">等待评价</string>
    <string name="bts_order_state_waiting_for_pay">等待支付</string>
    <string name="bts_order_state_waiting_to_go">等待出发</string>
    <string name="bts_order_stride_failed">抢单失败</string>
    <string name="bts_order_stride_success">抢单成功</string>
    <string name="bts_order_strive_cancel">取消</string>
    <string name="bts_order_strive_content">缘分难得，抢单不易，且抢且珍惜</string>
    <string name="bts_order_strive_ok">确认抢单</string>
    <string name="bts_order_tab1">待处理</string>
    <string name="bts_order_tab2">顺路</string>
    <string name="bts_order_tab3">附近</string>
    <string name="bts_order_tab4">任务</string>
    <string name="bts_order_time_outdate">对不起，请选择距离出发时间10分钟后的时间</string>
    <string name="bts_order_try_to_pay">立即支付</string>
    <string name="bts_order_valuation">计价规则</string>
    <string name="bts_order_wait_for_car_start">订单ID不能为空</string>
    <string name="bts_route_add_button_title">发布路线</string>
    <string name="bts_route_add_route_tips1">您还没有发布自己的上下班路线</string>
    <string name="bts_route_add_route_tips2">无法为您匹配到顺路订单</string>
    <string name="bts_route_back_time">下班时间</string>
    <string name="bts_route_dest_point">目的地</string>
    <string name="bts_route_info">请发布您的出行路线和时间</string>
    <string name="bts_route_leave_point">出发地</string>
    <string name="bts_route_leave_time_2">上班时间</string>
</resources>