<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/parent" android:background="@color/translunt_light_ss_gray" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.didi.beatles.ui.component.BtsTitleBar android:id="@id/title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <RelativeLayout android:id="@id/head_title_layout" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="43.0dip" android:layout_below="@id/title_bar">
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/dark_gray" android:gravity="center" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/bts_route_info" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/line_3_layout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/bts_route_config_row_height" android:layout_below="@id/head_title_layout">
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/dark_gray" android:gravity="center" android:id="@id/line_3_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bts_route_config_row_left_margin" android:text="@string/bts_route_leave_time_2" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/orange" android:gravity="center" android:id="@id/line_3_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bts_route_config_second_col_left_margin" android:text="9:00" android:layout_centerVertical="true" />
    </RelativeLayout>
    <View android:id="@id/divide_line_3" android:background="@color/translunt_light_ss_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/line_3_layout" />
    <RelativeLayout android:id="@id/line_4_layout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/bts_route_config_row_height" android:layout_below="@id/divide_line_3">
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/dark_gray" android:gravity="center" android:id="@id/line_4_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bts_route_config_row_left_margin" android:text="@string/bts_route_back_time" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/orange" android:gravity="center" android:id="@id/line_4_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bts_route_config_second_col_left_margin" android:text="18:00" android:layout_centerVertical="true" />
    </RelativeLayout>
    <View android:id="@id/divide_line_2" android:background="@color/translunt_light_ss_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/line_4_layout" />
    <RelativeLayout android:id="@id/line_1_layout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/bts_route_config_row_height" android:layout_below="@id/divide_line_2">
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/dark_gray" android:gravity="center" android:id="@id/line_1_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bts_route_config_row_left_margin" android:text="@string/bts_route_leave_point" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/orange" android:gravity="center" android:id="@id/line_1_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bts_route_config_second_col_left_margin" android:text="北京西站" android:layout_centerVertical="true" />
    </RelativeLayout>
    <View android:id="@id/divide_line_1" android:background="@color/translunt_light_ss_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/line_1_layout" />
    <RelativeLayout android:id="@id/line_2_layout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/bts_route_config_row_height" android:layout_below="@id/divide_line_1">
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/dark_gray" android:gravity="center" android:id="@id/line_2_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bts_route_config_row_left_margin" android:text="@string/bts_route_dest_point" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/orange" android:gravity="center" android:id="@id/line_2_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/bts_route_config_second_col_left_margin" android:text="上地五街" android:layout_centerVertical="true" />
    </RelativeLayout>
    <View android:id="@id/divide_line_4" android:background="@color/translunt_light_ss_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/line_4_layout" />
    <Button android:textSize="@dimen/bts_font_size_medium" android:textColor="@color/common_login_btn_text_color" android:gravity="center" android:id="@id/submit" android:background="@drawable/bts_btn_orange_selector" android:layout_width="fill_parent" android:layout_height="@dimen/bts_common_btn_height" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/bts_order_ok" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>