<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/btsXingchengRLayout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/bts_xingcheng_layout_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/text_color_dark_gray" android:gravity="left|center" android:id="@id/bts_day_textview" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:minWidth="65.0dip" android:text="@string/bts_common_today" android:layout_below="@id/bts_day_textview" android:layout_centerVertical="true" />
    <View android:id="@id/bts_xingcheng_view_vertical_line" android:background="@color/bts_common_line_color" android:layout_width="0.33000004dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="9.0dip" android:layout_marginBottom="9.0dip" android:layout_toRightOf="@id/bts_day_textview" />
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_toRightOf="@id/bts_xingcheng_view_vertical_line" android:layout_centerVertical="true">
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/text_color_dark_gray" android:id="@id/bts_from_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bts_common_from" />
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/text_color_dark_gray" android:id="@id/bts_to_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bts_common_to" android:layout_below="@id/bts_from_textview" android:layout_alignLeft="@id/bts_from_textview" />
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/text_color_dark_gray" android:id="@id/bts_from_value_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="出发地址" android:layout_toRightOf="@id/bts_from_textview" android:layout_alignTop="@id/bts_from_textview" />
        <TextView android:textSize="@dimen/bts_font_size_small" android:textColor="@color/text_color_dark_gray" android:id="@id/bts_to_value_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="到达地址" android:layout_toRightOf="@id/bts_to_textview" android:layout_alignTop="@id/bts_to_textview" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/bts_font_size_xxx_x_large" android:textColor="@color/text_color_dark_gray" android:id="@id/bts_xingcheng_fee" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="27.0dip" android:text="3284" android:includeFontPadding="false" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <TextView android:textSize="9.0sp" android:textColor="@color/text_color_light_gray" android:id="@id/bts_yuan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:text="@string/bts_common_yuan" android:includeFontPadding="false" android:layout_alignBaseline="@id/bts_xingcheng_fee" android:layout_alignBottom="@id/bts_xingcheng_fee" android:layout_alignParentRight="true" />
    <View android:id="@id/bts_xingcheng_view_vertical_line1" android:background="@color/bts_common_line_color" android:layout_width="0.33000004dip" android:layout_height="fill_parent" android:layout_marginTop="9.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="9.0dip" android:layout_toLeftOf="@id/bts_xingcheng_fee" />
</RelativeLayout>